# live2d-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/live2d/: Cargo.toml
crates/live2d-core/: Cargo.toml
crates/live2d-core/src/: lib.rs
crates/live2d-perf/: Cargo.toml
crates/live2d-perf/benches/: render_plan.rs
crates/live2d-perf/src/: lib.rs  main.rs
crates/live2d-probe/: Cargo.toml
crates/live2d-probe/src/: lib.rs
crates/live2d-render/: Cargo.toml
crates/live2d-render/src/: lib.rs
crates/live2d-runtime/: Cargo.toml
crates/live2d-runtime/src/: lib.rs  motion.rs  physics.rs
crates/live2d-sys/: Cargo.toml  build.rs
crates/live2d-sys/src/: lib.rs
crates/live2d-wgpu/: Cargo.toml
crates/live2d-wgpu/src/: api.rs  lib.rs  live2d.wgsl  main_pass.rs  mask.rs  offscreen.wgsl  pipeline.rs  post_process.rs  preview.rs  preview.wgsl  probe.rs  renderer.rs  resources.rs  tests.rs  upload.rs
crates/live2d/src/: lib.rs
crates/nanavts-display/: Cargo.toml  replay.ps1
crates/nanavts-display/assets/: colorful-effects.json
crates/nanavts-display/fixtures/: replay-session.json
crates/nanavts-display/src/: app.rs  catalog.rs  http.rs  lib.rs  live2d.rs  main.rs  model.rs  preview.rs  replay.rs  session.rs
docs/performance/: news-real-model-performance.md
skills/live2d-core-runtime/: SKILL.md
skills/live2d-core-runtime/agents/: openai.yaml
skills/live2d-cubism-perf/: SKILL.md
skills/live2d-cubism-perf/agents/: openai.yaml
skills/live2d-framework-migration-plan/: SKILL.md
skills/live2d-framework-migration-plan/agents/: openai.yaml
skills/live2d-framework-migration-plan/references/: migration-rules.md
skills/live2d-framework-reference/: SKILL.md
skills/live2d-framework-reference/agents/: openai.yaml
skills/live2d-framework-reference/references/: framework-capabilities.md
skills/live2d-render-plan/: SKILL.md
skills/live2d-render-plan/agents/: openai.yaml
skills/live2d-rs-dev/: SKILL.md
skills/live2d-rs-dev/agents/: openai.yaml
skills/live2d-wgpu-renderer/: SKILL.md
skills/live2d-wgpu-renderer/agents/: openai.yaml
