[package]
name = "live2d"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
live2d-core.workspace = true
live2d-render.workspace = true
live2d-runtime.workspace = true
live2d-wgpu = { workspace = true, optional = true }

[features]
default = []
wgpu = ["dep:live2d-wgpu"]
live2d-cubism = ["live2d-runtime/live2d-cubism"]
