[package]
name = "nanavts-display"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nanavts_display"
path = "src/lib.rs"

[[bin]]
name = "nanavts-display-wgpu"
path = "src/main.rs"
required-features = ["wgpu", "winit"]

[dependencies]
bytemuck.workspace = true
live2d.workspace = true
pollster = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

[features]
default = []
live2d-cubism = ["live2d/live2d-cubism"]
wgpu = ["live2d/wgpu", "dep:wgpu"]
winit = ["wgpu", "dep:pollster", "dep:winit"]
